--- a/webapp/public/javascripts/angular/paginator/templates/paginator-controls.html
+++ b/webapp/public/javascripts/angular/paginator/templates/paginator-controls.html
@@ -1,6 +1,18 @@
-<ul class="pagination">
+<ul class="pagination" ng-if="$ctrl.pages && $ctrl.pages.length > 0">
+  <li ng-class="{ disabled : $ctrl.$paginator.currentPage() === 1 }">
+    <a href="" ng-click="$ctrl.$paginator.currentPage() > 1 && $ctrl.setCurrent(1)">&laquo;</a>
+  </li>
+  <li ng-class="{ disabled : $ctrl.$paginator.currentPage() === 1 }">
+    <a href="" ng-click="$ctrl.$paginator.currentPage() > 1 && $ctrl.setCurrent($ctrl.$paginator.currentPage() - 1)">&lsaquo;</a>
+  </li>
   <li ng-repeat="pageNumber in $ctrl.pages" 
       ng-class="{'active': $ctrl.$paginator.currentPage() === pageNumber}">
     <a href="javascript::void();" ng-click="$ctrl.setCurrent(pageNumber)">{{ pageNumber }}</a>
+  </li>
+  <li ng-class="{ disabled : $ctrl.$paginator.currentPage() === $ctrl.$paginator.numberOfPages() }">
+    <a href="" ng-click="$ctrl.$paginator.currentPage() < $ctrl.$paginator.numberOfPages() && $ctrl.setCurrent($ctrl.$paginator.currentPage() + 1)">&rsaquo;</a>
+  </li>
+  <li ng-class="{ 'disabled' : $ctrl.$paginator.currentPage() === $ctrl.$paginator.numberOfPages() }">
+    <a href="" ng-click="$ctrl.$paginator.currentPage() < $ctrl.$paginator.numberOfPages() && $ctrl.setCurrent($ctrl.$paginator.numberOfPages())">&raquo;</a>
   </li>
 </ul>
