--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -91,7 +91,7 @@
           <td ng-if="extra.export"></td>
           <td ng-if="isFunction(remove)">
         </tr>
-        <tr ng-repeat="element in filteredModel = (model | filter:searchInput) | paginatorLimit: 4 | orderBy: orderElementby track by $index">
+        <tr ng-repeat="element in filteredModel = (model | filter:searchInput) | paginatorLimit: 10 | orderBy: orderElementby track by $index">
           <td ng-show="isFunction(icon())" style="width: 50px;">
             <img style="margin-left: 5px;" ng-if="iconProperties.type === 'img'" ng-src="{{ icon()(element) }}" alt="" width="{{ width }}" height="{{ height }}"/>
             <span ng-if="iconProperties.type === 'icon'" class="label">
@@ -190,7 +190,7 @@
                     title="{{ i18n.__('Remove data') }}">
               <span class="glyphicon glyphicon-remove"></span>
               <span class="hidden-xs"></span>
-              <span ng-bing="i18n.__('Remove')"></span>
+              <span ng-bind="i18n.__('Remove')"></span>
             </button>
           </td>
         </tr>
