--- a/webapp/public/javascripts/angular/data-series/templates/storager.html
+++ b/webapp/public/javascripts/angular/data-series/templates/storager.html
@@ -1,121 +1,118 @@
-<div class="row" ng-controller="DataSeriesStoragerController">
+<div class="col-md-12">
+  <form name="$ctrl.forms.storagerDataForm">
 
-  <div class="col-md-12">
-    <form name="forms.storagerDataForm">
-
-      <div class="col-md-4">
-        <div class="form-group" terrama2-show-errors>
-          <label ng-bind="i18n.__('Output Format')">:</label>
-            <select id="storageFormat" 
-                    class="form-control" 
-                    name="format" 
-                    ng-model="storager.format"
-                    ng-disabled="isUpdating && hasCollector"
-                    ng-change="onStoragerFormatChange()"
-                    ng-options="format.name for format in storagerFormats | filter: { collector: false }" 
-                    required>
-          </select>
-          <label class="help-block text-danger"
-                 ng-show="forms.storagerDataForm.format.$dirty && forms.storagerDataForm.format.$error.required"
-                 ng-bind="i18n.__('Output format is required')">
-          </label>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="form-group" terrama2-show-errors>
-          <label ng-bind="i18n.__('Data Store')">:</label>
-          <select class="form-control" 
-                  name="storager_data_provider_id" 
-                  ng-model="storager_data_provider_id"
-                  ng-options="provider.id as provider.name for provider in dataProvidersStorager" 
-                  required>
-            <option></option>
-          </select>
-
-          <label class="help-block text-danger"
-                 ng-show="forms.storagerDataForm.storager_data_provider_id.$dirty && forms.storagerDataForm.storager_data_provider_id.$error.required"
-                 ng-bind="i18n.__('Data Store is required')">
-          </label>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="form-group" terrama2-show-errors>
-          <label ng-bind="i18n.__('Service')">:</label>
-          <select id="storageService" 
+    <div class="col-md-4">
+      <div class="form-group" terrama2-show-errors>
+        <label ng-bind="$ctrl.i18n.__('Output Format')">:</label>
+          <select id="storageFormat" 
                   class="form-control" 
-                  name="service" 
-                  ng-model="storager_service"
-                  required
-                  ng-options="service.id as service.name for service in services">
-          </select>
-
-          <label class="help-block text-danger"
-                 ng-show="forms.storagerDataForm.service.$dirty && forms.storagerDataForm.service.$error.required"
-                 ng-bind="i18n.__('Service is required')">
-          </label>
-        </div>
+                  name="format" 
+                  ng-model="$ctrl.storager.format"
+                  ng-disabled="$ctrl.isUpdating && $ctrl.hasCollector"
+                  ng-change="$ctrl.onStoragerFormatChange()"
+                  ng-options="format.name for format in $ctrl.storagerFormats | filter: { collector: false }" 
+                  required>
+        </select>
+        <label class="help-block text-danger"
+                ng-show="$ctrl.forms.storagerDataForm.format.$dirty && $ctrl.forms.storagerDataForm.format.$error.required"
+                ng-bind="$ctrl.i18n.__('Output format is required')">
+        </label>
       </div>
-    </form>
+    </div>
+
+    <div class="col-md-4">
+      <div class="form-group" terrama2-show-errors>
+        <label ng-bind="$ctrl.i18n.__('Data Store')">:</label>
+        <select class="form-control" 
+                name="storager_data_provider_id" 
+                ng-model="$ctrl.storager_data_provider_id"
+                ng-options="provider.id as provider.name for provider in $ctrl.dataProvidersStorager" 
+                required>
+          <option></option>
+        </select>
+
+        <label class="help-block text-danger"
+                ng-show="$ctrl.forms.storagerDataForm.storager_data_provider_id.$dirty && $ctrl.forms.storagerDataForm.storager_data_provider_id.$error.required"
+                ng-bind="$ctrl.i18n.__('Data Store is required')">
+        </label>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="form-group" terrama2-show-errors>
+        <label ng-bind="$ctrl.i18n.__('Service')">:</label>
+        <select id="storageService" 
+                class="form-control" 
+                name="service" 
+                ng-model="$ctrl.storager_service"
+                required
+                ng-options="service.id as service.name for service in $ctrl.services">
+        </select>
+
+        <label class="help-block text-danger"
+                ng-show="$ctrl.forms.storagerDataForm.service.$dirty && $ctrl.forms.storagerDataForm.service.$error.required"
+                ng-bind="$ctrl.i18n.__('Service is required')">
+        </label>
+      </div>
+    </div>
+  </form>
+</div>
+
+<div class="col-md-12">
+  <!-- schema form -->
+  <div class="col-md-12" ng-show="$ctrl.options.showStoragerForm">
+    <form name="$ctrl.forms.storagerForm" sf-schema="$ctrl.schemaStorager" sf-form="$ctrl.formStorager" sf-model="$ctrl.modelStorager" sf-options="$ctrl.options"></form>
   </div>
 
   <div class="col-md-12">
-    <!-- schema form -->
-    <div class="col-md-12" ng-show="showStoragerForm">
-      <form name="forms.storagerForm" sf-schema="schemaStorager" sf-form="formStorager" sf-model="modelStorager" sf-options="options"></form>
-    </div>
+    <!--dcp table -->
+    <div class="col-md-12 terrama2-nopadding-box" ng-if="semantics === 'DCP' && storager.format && storager.format.code && isDynamic">
+      <div class="col-md-12">
+        <div class="row">
+          <div class="box-body table-responsive no-padding">
+            <table class="table table-hover" >
+              <tbody style="overflow-y: auto; height: 150px;">
+              <!-- header-->
+              <tr style="height: 30px;">
+                <th ng-repeat="field in tableFieldsStorager">{{ capitalizeIt(field) }}</th>
+                <th>ID</th>
+              </tr>
 
-    <div class="col-md-12">
-      <!--dcp table -->
-      <div class="col-md-12 terrama2-nopadding-box" ng-if="semantics === 'DCP' && storager.format && storager.format.code && isDynamic">
-        <div class="col-md-12">
-          <div class="row">
-            <div class="box-body table-responsive no-padding">
-              <table class="table table-hover" >
-                <tbody style="overflow-y: auto; height: 150px;">
-                <!-- header-->
-                <tr style="height: 30px;">
-                  <th ng-repeat="field in tableFieldsStorager">{{ capitalizeIt(field) }}</th>
-                  <th>ID</th>
-                </tr>
+              <tr ng-repeat="dcp in dcpsStorager track by $index">
+                <td ng-repeat="field in tableFieldsStorager">
+                  <!-- todo: fix it -->
+                  <span ng-if="field.toLowerCase() == 'table_name'" editable-text="dcp[field]">
+                    {{ dcp[field]}}
+                  </span>
 
-                <tr ng-repeat="dcp in dcpsStorager track by $index">
-                  <td ng-repeat="field in tableFieldsStorager">
-                    <!-- todo: fix it -->
-                    <span ng-if="field.toLowerCase() == 'table_name'" editable-text="dcp[field]">
-                      {{ dcp[field]}}
+                  <span ng-if="field.toLowerCase() != 'table_name'">
+                    <span ng-show="!isBoolean(dcp[field])" ng-bind="dcp[field]"></span>
+                    <span ng-show="isBoolean(dcp[field])">
+                      <input type="checkbox" ng-model="dcp[field]" ng-disabled="true">
                     </span>
-
-                    <span ng-if="field.toLowerCase() != 'table_name'">
-                      <span ng-show="!isBoolean(dcp[field])" ng-bind="dcp[field]"></span>
-                      <span ng-show="isBoolean(dcp[field])">
-                        <input type="checkbox" ng-model="dcp[field]" ng-disabled="true">
-                      </span>
-                    </span>
-                  </td>
-                  <td> {{ $index + 1 }}</td>
-                </tr>
-                </tbody>
-              </table>
-            </div><!-- /.box-body -->
-          </div>
+                  </span>
+                </td>
+                <td> {{ $index + 1 }}</td>
+              </tr>
+              </tbody>
+            </table>
+          </div><!-- /.box-body -->
         </div>
       </div>
     </div>
-
   </div>
 
-  <div class="col-md-12" style="margin-top: 30px;">
-    <div class="col-md-12">
-      <div class="box box-default box-solid">
-        <div class="box-header with-border">
-          <h3 class="box-title">{{ i18n.__('Schedule') }}</h3>
-        </div>
+</div>
 
-        <div style="display: block;" class="box-body">
-          <terrama2-schedule model="schedule" options="scheduleOptions"></terrama2-schedule>
-        </div>
+<div class="col-md-12" style="margin-top: 30px;">
+  <div class="col-md-12">
+    <div class="box box-default box-solid">
+      <div class="box-header with-border">
+        <h3 class="box-title">{{ $ctrl.i18n.__('Schedule') }}</h3>
+      </div>
+
+      <div style="display: block;" class="box-body">
+        <terrama2-schedule model="$ctrl.schedule" options="$ctrl.scheduleOptions"></terrama2-schedule>
       </div>
     </div>
   </div>
