pagination handler. TODO: handle cache

--- a/webapp/views/configuration/status.html
+++ b/webapp/views/configuration/status.html
@@ -67,7 +67,7 @@
         </terrama2-table-view>
 
         <div class="col-md-offset-4 col-md-6 col-xs-12">
-          <terrama2-paginator max-pages="10" size="logSize" on-change="onPageChanged(currentPage, previousPage);"></terrama2-paginator>
+          <terrama2-paginator max-pages="10" size="filteredModel.length" on-change="onPageChanged(currentPage, previousPage);"></terrama2-paginator>
         </div>
       </div>
 
