--- a/webapp/public/javascripts/angular/data-series/templates/storager.html
+++ b/webapp/public/javascripts/angular/data-series/templates/storager.html
@@ -66,7 +66,7 @@
 
   <div class="col-md-12">
     <!--dcp table -->
-    <div class="col-md-12 terrama2-nopadding-box" ng-if="semantics === 'DCP' && storager.format && storager.format.code && isDynamic">
+    <div class="col-md-12 terrama2-nopadding-box" ng-if="$ctrl.semantics === 'DCP' && $ctrl.storager.format && $ctrl.storager.format.code && $ctrl.options.isDynamic">
       <div class="col-md-12">
         <div class="row">
           <div class="box-body table-responsive no-padding">
@@ -74,20 +74,20 @@
               <tbody style="overflow-y: auto; height: 150px;">
               <!-- header-->
               <tr style="height: 30px;">
-                <th ng-repeat="field in tableFieldsStorager">{{ capitalizeIt(field) }}</th>
+                <th ng-repeat="field in $ctrl.tableFieldsStorager">{{ $ctrl.options.capitalizeIt(field) }}</th>
                 <th>ID</th>
               </tr>
 
-              <tr ng-repeat="dcp in dcpsStorager track by $index">
-                <td ng-repeat="field in tableFieldsStorager">
+              <tr ng-repeat="dcp in $ctrl.dcpsStorager track by $index">
+                <td ng-repeat="field in $ctrl.tableFieldsStorager">
                   <!-- todo: fix it -->
                   <span ng-if="field.toLowerCase() == 'table_name'" editable-text="dcp[field]">
                     {{ dcp[field]}}
                   </span>
 
                   <span ng-if="field.toLowerCase() != 'table_name'">
-                    <span ng-show="!isBoolean(dcp[field])" ng-bind="dcp[field]"></span>
-                    <span ng-show="isBoolean(dcp[field])">
+                    <span ng-show="!$ctrl.options.isBoolean(dcp[field])" ng-bind="dcp[field]"></span>
+                    <span ng-show="$ctrl.options.isBoolean(dcp[field])">
                       <input type="checkbox" ng-model="dcp[field]" ng-disabled="true">
                     </span>
                   </span>
