--- a/webapp/views/administration/user.html
+++ b/webapp/views/administration/user.html
@@ -40,7 +40,7 @@ TerraMA² {{ i18n.__('User Registration') }}
     <div class="col-md-12">
       <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
     </div>
-    <div class="row" ng-init="initialization({[ currentUser.id ]}, '{[ redirectUrl ]}');">
+    <div class="row" ng-init="initialization({[ user.id ]}, '{[ redirectUrl ]}');">
       <div class="col-md-12">
         <div class="box box-default box-solid">
           <div class="box-header with-border">
