--- a/webapp/views/profile.html
+++ b/webapp/views/profile.html
@@ -41,7 +41,7 @@ TerraMA² {{ i18n.__('User Registration') }}
     <div class="col-md-12">
       <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
     </div>
-    <div class="row" ng-init="initialization({[ currentUser.id ]});">
+    <div class="row" ng-init="initialization({[ currentUser.id ]}, '{[ redirectUrl ]}');">
       <div class="col-md-12">
         <div class="box box-default box-solid">
           <div class="box-header with-border">
