TerraMA2 schema form addon to validate mask pattern

--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -407,6 +407,9 @@ tbody td:last-child, thead th:last-child {
   padding: 10px 8px !important;
 }
 
+.warn-message {
+  color: #f39c12;
+}
 /**
  *
  * It handles Mozila FireFox CSS specific styles
