Created schedule type enum

--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -111,7 +111,8 @@
         DataSeriesType: {[ Enums.DataSeriesType|json|safe ]}  || {},
         DataSeriesFormat: {[ Enums.DataSeriesFormat|json|safe ]} || {},
         TemporalityType: {[ Enums.TemporalityType|json|safe ]}  || {},
-        ServiceType: {[ Enums.ServiceType|json|safe ]}  || {}
+        ServiceType: {[ Enums.ServiceType|json|safe ]}  || {},
+        ScheduleType: {[ Enums.ScheduleType|json|safe ]}
       }
     }
 
