--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -29,6 +29,11 @@
   var configuration = {
     view: {[ view|json|safe ]}
   };
+  var globals = {
+    enums: {
+      ScheduleType: {[ ScheduleType|json|safe ]}
+    }
+  };
 </script>
 
 <!-- Moment Datetime JS -->
