--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -52,7 +52,8 @@
       ResolutionType: {[ Enums.ResolutionType|json|safe ]},
       InterestAreaType: {[ Enums.InterestAreaType|json|safe ]},
       DataSeriesFormat: {[ Enums.DataSeriesFormat|json|safe ]},
-      DataProviderType: {[ Enums.DataProviderType|json|safe ]}
+      DataProviderType: {[ Enums.DataProviderType|json|safe ]},
+      ScheduleType: {[ Enums.ScheduleType|json|safe ]}
     }
   };
 
