--- a/webapp/public/javascripts/angular/schema-form-plugin/mask-warn/templates/terrama2-mask-field.html
+++ b/webapp/public/javascripts/angular/schema-form-plugin/mask-warn/templates/terrama2-mask-field.html
@@ -1,15 +1,21 @@
-<div class="form-group schema-form-{{form.type}} {{form.htmlClass}}" ng-class="{\'has-error\': form.disableErrorState !== true && hasError(), \'has-success\': form.disableSuccessState !== true && hasSuccess(), \'has-feedback\': form.feedback !== false }">
-<!-- Surrounding DIV for sfField builder to add a sfField directive to. -->
-  <!-- Create your own form options -->
 
-  <label class="control-label {{form.labelHtmlClass}}" ng-class="{'sr-only': !showTitle()}" for="{{form.key.slice(-1)[0]}}">{{form.title}}</label>
-  
-  <terrama2-mask-field sf-field-model schema-validate="form"></terrama2-mask-field>
-  
-  <!-- sf-field-model let's the ngModel builder know that you want a ng-model that matches against the form key here -->
-  <!-- schema-validate="form" validates the form against the schema -->
+<!-- hasError is implemented by ASF and returns true if there is a validation error. -->
+<div class="form-group schema-form-{{form.type}} {{form.htmlClass}}" ng-class="{'has-error': form.disableErrorState !== true && hasError(), 'has-success': form.disableSuccessState !== true && hasSuccess(), 'has-feedback': form.feedback !== false }">
+    <!-- The showTitle function is implemented by ASF, returns true if the title should be shown -->
+    <label class="control-label {{form.labelHtmlClass}}" ng-class="{'sr-only': !showTitle()}" for="{{form.key.slice(-1)[0]}}">{{form.title}}</label>
 
-  <span class="help-block" sf-message="form.description"></span>
-  <!-- Description & Validation messages -->
+    <!-- Specify the model for the directive and add the directive, making the controller available to the children-->
+    <div>
+        <!-- Bind the input to the model-->
+        <input ng-show="form.key" type="{{form.type}}" step="any" sf-changed="form" placeholder="{{form.placeholder}}" class="form-control {{form.fieldHtmlClass}}" id="{{form.key.slice(-1)[0]}}" ng-model-options="form.ngModelOptions" ng-disabled="form.readonly" schema-validate="form" name="{{form.key.slice(-1)[0]}}" aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}" sf-field-model ng-model="$$value$$" required terrama2-mask-form>
+
+    </div>
+
+    <!-- hasError() and the other functions are also defined by ASF, so this will either
+        show a validation error or the description -->
+    <span style="top: 25px; margin-right: 20px !important" class="form-control-feedback" ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }" aria-hidden="true"></span>
+    <span id="{{form.key.slice(-1)[0] + 'Status'}}" class="sr-only">{{ hasSuccess() ? '(success)' : '(error)' }}</span>
+    <span class="help-block" ng-if="hasError() && errorMessage(schemaError())">{{ errorMessage(schemaError())}}</span>
+    <span class="warn-message" ng-if="showMessage && !hasError()">Files can be overwritten</span>
 
 </div>
