--- a/webapp/public/javascripts/angular/data-series/templates/csvFormat.html
+++ b/webapp/public/javascripts/angular/data-series/templates/csvFormat.html
@@ -41,7 +41,7 @@
   <div class="col-md-12">
     <div class="form-group">
       <label ng-bind="$ctrl.i18n.__('Fields')+':'"></label>
-      <csv-format-detail ng-repeat="format in $ctrl.csvFormatData.fields" index="$index" format="format" fields-type="$ctrl.fieldsType" on-delete="$ctrl.deleteFormat(format)"></csv-format-detail>
+      <csv-format-detail ng-repeat="format in $ctrl.csvFormatData.fields" format="format" fields-type="$ctrl.fieldsType" on-delete="$ctrl.deleteFormat(format)"></csv-format-detail>
     </div>
   </div>
 </div>
