--- a/webapp/public/javascripts/angular/data-series/templates/csvFieldDetail.html
+++ b/webapp/public/javascripts/angular/data-series/templates/csvFieldDetail.html
@@ -3,67 +3,67 @@
 			<div class="col-md-2">
 				<div class="form-group" terrama2-show-errors>
 					<label ng-bind="$ctrl.i18n.__('Type')+':'"></label>
-					<select name="type" class="form-control" ng-model="$ctrl.format.type" ng-change="$ctrl.onFieldTypeChange()" required>
+					<select name="type" class="form-control" ng-model="$ctrl.field.type" ng-change="$ctrl.onFieldTypeChange()" required>
 						<option ng-repeat="type in $ctrl.fieldsType" value="{{type.value}}">{{$ctrl.i18n.__(type.title)}}</option>
 					</select> 
 				</div>
 			</div>
 			
-			<div ng-if="$ctrl.format.type == 'GEOMETRY_POINT'">
+			<div ng-if="$ctrl.field.type == 'GEOMETRY_POINT'">
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Latitude')+':'"></label>
-						<input name="latitude" class="form-control" type="text" ng-model="$ctrl.format.latitude_property_name" required>
+						<input name="latitude" class="form-control" type="text" ng-model="$ctrl.field.latitude_property_name" required>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Longitude')+':'"></label>
-						<input name="longitude" class="form-control" type="text" ng-model="$ctrl.format.longitude_property_name" required>
+						<input name="longitude" class="form-control" type="text" ng-model="$ctrl.field.longitude_property_name" required>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Alias')+':'"></label>
-						<input name="alias" class="form-control" type="text" ng-model="$ctrl.format.alias" required>
+						<input name="alias" class="form-control" type="text" ng-model="$ctrl.field.alias" required>
 					</div>
 				</div>
 			</div>
 
-			<div class="col-md-9" ng-if="$ctrl.format.type == 'FLOAT' || $ctrl.format.type == 'TEXT'">
+			<div class="col-md-9" ng-if="$ctrl.field.type == 'FLOAT' || $ctrl.field.type == 'TEXT'">
 				<div class="row">
 					<div class="col-md-6">
 						<div class="form-group" terrama2-show-errors>
 							<label ng-bind="$ctrl.i18n.__('Property name')+':'"></label>
-							<input name="property_name" class="form-control" type="text" ng-model="$ctrl.format.property_name" required>
+							<input name="property_name" class="form-control" type="text" ng-model="$ctrl.field.property_name" required>
 						</div>
 					</div>
 					<div class="col-md-6">			
 						<div class="form-group" terrama2-show-errors>
 							<label ng-bind="$ctrl.i18n.__('Alias')+':'"></label>
-							<input name="alias" class="form-control" type="text" ng-model="$ctrl.format.alias" required>
+							<input name="alias" class="form-control" type="text" ng-model="$ctrl.field.alias" required>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div ng-if="$ctrl.format.type == 'DATETIME'">
+			<div ng-if="$ctrl.field.type == 'DATETIME'">
 				<div  class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Property name')+':'"></label>
-						<input name="property_name" class="form-control" type="text" ng-model="$ctrl.format.property_name" required>
+						<input name="property_name" class="form-control" type="text" ng-model="$ctrl.field.property_name" required>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Format')+':'"></label>
-						<input name="format" class="form-control" type="text" ng-model="$ctrl.format.format" required>
+						<input name="format" class="form-control" type="text" ng-model="$ctrl.field.format" required>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Alias')+':'"></label>
-						<input name="alias" class="form-control" type="text" ng-model="$ctrl.format.alias" required>
+						<input name="alias" class="form-control" type="text" ng-model="$ctrl.field.alias" required>
 					</div>
 				</div>
 			</div>
