Create conditional schedule model and adapting view registration to accept conditional schedule

--- a/webapp/public/javascripts/angular/data-series/templates/schedule.html
+++ b/webapp/public/javascripts/angular/data-series/templates/schedule.html
@@ -12,6 +12,7 @@
           <option value="1">{{ i18n.__('Schedule') }}</option>
           <option ng-show="options.showHistoricalOption" value="2">{{ i18n.__('Reprocessing Historical Data') }}</option>
           <option value="3">{{ i18n.__('Manual') }}</option>
+          <option ng-show="options.showConditionalOption" value="4">{{ i18n.__('Conditional') }}</option>
         </select>
 
         <label class="help-block text-danger"
