--- a/webapp/public/javascripts/angular/data-series/templates/csvFieldDetail.html
+++ b/webapp/public/javascripts/angular/data-series/templates/csvFieldDetail.html
@@ -89,7 +89,7 @@
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Format')+':'"></label>
-						<input name="format" class="form-control" type="text" ng-model="$ctrl.field.format" pattern="^([\w*.]+|%YYYY|%YY|%MM|%DD|%hh|%mm|%ss)+$" required>
+						<input name="format" class="form-control" type="text" ng-model="$ctrl.field.format" pattern="^([\w*.:\/\\\s-]+|%YYYY|%YY|%MM|%DD|%hh|%mm|%ss)+$" required>
 						<label class="help-block text-danger"
 										ng-show="csvFieldsForm.format.$dirty && csvFieldsForm.format.$error.required"
 										ng-bind="$ctrl.i18n.__('Required')">
