--- a/webapp/views/configuration/dynamicDataSeries.html
+++ b/webapp/views/configuration/dynamicDataSeries.html
@@ -42,7 +42,11 @@
           return "/images/analysis/monitored-object/monitored-object_analysis.png";
           break;
         case globals.enums.DataSeriesType.GRID:
-          return "/images/dynamic-data-series/grid/grid.png";
+          if (object.isAnalysis){
+            return "/images/analysis/grid/grid_analysis.png";
+          } else {
+            return "/images/dynamic-data-series/grid/grid.png";
+          }
           break;
         case globals.enums.DataSeriesType.OCCURRENCE:
           return "/images/dynamic-data-series/occurrence/occurrence.png";
