Fix static data menu icon

--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -3,7 +3,7 @@
 {# set MENU_URLS = {"projects": {name: 'Projects', url: "/configuration/projects", icon: "fa-sitemap"}} #}
 {% set MENU_URLS["data-provider"] = {name: 'Data Servers', url: "/configuration/providers", icon: "fa-database"} %}
 {% set MENU_URLS["dynamic-data"] = {name: 'Dynamic Data', url: "/configuration/dynamic/dataseries", icon: "fa-clock-o"} %}
-{% set MENU_URLS["static-data"] = {name: 'Static Data', url: "/configuration/static/dataseries", icon: "fa-folder-o"} %}
+{% set MENU_URLS["static-data"] = {name: 'Static Data', url: "/configuration/static/dataseries", icon: "fa-folder"} %}
 {% set MENU_URLS["analysis"] = {name: 'Analysis', url: "/configuration/analysis", icon: "fa-search"} %}
 {% set MENU_URLS["views"] = {name: 'Views', url: "/configuration/views", icon: "fa-eye"} %}
 {% set MENU_URLS["alerts"] = {name: 'Alerts', url: "javascript::void()", css: "terrama2-link-disabled", icon: "fa-warning"} %}
