--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -6,7 +6,7 @@
 {% set MENU_URLS["static-data"] = {name: 'Static Data', url: "/configuration/static/dataseries", icon: "fa-folder-o"} %}
 {% set MENU_URLS["analysis"] = {name: 'Analysis', url: "/configuration/analysis", icon: "fa-tasks"} %}
 {% set MENU_URLS["views"] = {name: 'Views', url: "/configuration/views", icon: "fa-map"} %}
-{% set MENU_URLS["alerts"] = {name: 'Alerts', url: "javascript::void()", css: "terrama2-link-disabled", icon: "fa-bell"} %}
+{% set MENU_URLS["alerts"] = {name: 'Alerts', url: "/configuration/alerts", icon: "fa-bell"} %}
 {% set MENU_URLS["status"] = {name: 'Status', url: "/configuration/status", icon: "fa-feed"} %}
 
 <!DOCTYPE html>
