--- a/webapp/views/configuration/alerts.html
+++ b/webapp/views/configuration/alerts.html
@@ -2,69 +2,17 @@
 
 {% set tabActive = "alerts" %}
 
-{% block ngApp %} ng-app="terrama2.alerts" {% endblock %}
+{% block ngApp %} ng-app="terrama2.alerts.controllers.alertlist" {% endblock %}
 
 {% block title %} TerraMA² {{ i18n.__('Alerts') }} {% endblock %}
 
 {% block javascripts %}
 
-<!-- Angular -->
-<script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
-<!-- Internationalization -->
-<script type="text/javascript" src="/bower_components/i18n-node-angular/dist/i18n-node-angular.min.js"></script>
-<script src="/javascripts/angular/app.js"></script>
-<script src="/javascripts/angular/table/table.js"></script>
-
-<script>
-  angular.module('terrama2.alerts', ['terrama2.table'])
-    .controller("ListController", ['$scope', 'i18n', function($scope, i18n) {
-      $scope.i18n = i18n;
-
-      $scope.model = [
-        {
-          name: "Alert 1",
-          color: "blue"
-        },
-        {
-          name: "Alert 2",
-          color: "yellow"
-        },
-        {
-          name: "Alert 3",
-          color: "red"
-        }
-      ];
-
-      $scope.fields = ['name'];
-      $scope.linkToAdd = "";
-      $scope.link = function(object) {
-        return "";
-      };
-
-      $scope.iconProperties = {
-        type: "icon"
-      };
-
-      $scope.icon = function(object) {
-        if (object.color === 'blue')
-          return "fa fa-check label-primary";
-
-        if (object.color === 'yellow')
-          return "fa fa-eye label-warning";
-
-        if (object.color === 'red')
-          return "fa fa-exclamation label-danger";
-
-        return "";
-      }
-    }]);
-</script>
-
 {% endblock %}
 
 {% block content %}
 
-<div class="col-md-12" ng-controller="ListController">
+<div class="col-md-12" ng-controller="AlertListController">
   <div class="col-md-12">
     <div class="box">
       <div class="box-header with-border">
