--- a/webapp/views/configuration/provider.html
+++ b/webapp/views/configuration/provider.html
@@ -42,7 +42,7 @@
     <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
     <div class="row">
       <form name="forms.dataProviderForm">
-        <div ng-class="{'col-md-7': dataProvider.protocol=='FILE', 'col-md-5': dataProvider.protocol!='FILE'}">
+        <div class="col-md-7">
           <div class="form-group has-feedback" terrama2-show-errors>
             <label>{{ i18n.__("Name") }}:</label>
             <input class="form-control"
@@ -72,30 +72,12 @@
           <!-- /.form-group -->
         </div>
 
-        <div class="col-md-2" ng-show="dataProvider.protocol != 'FILE'">
-          <div class="form-group has-feedback" terrama2-show-errors>
-            <label>{{ i18n.__("Data Server Timeout") }}:</label>
-            <input class="form-control"
-                   name="timeout"
-                   ng-model="dataProvider.timeout"
-                   placeholder="{{ i18n.__('Data Server Timeout') }}"
-                   type="number" terrama2-server-errors="serverErrors" required>
-
-            <span class="form-control-feedback glyphicon" ng-show="forms.dataProviderForm.timeout.$dirty" ng-class="{'glyphicon-ok': forms.dataProviderForm.timeout.$valid, 'glyphicon-remove': forms.dataProviderForm.timeout.$invalid }"></span>
-
-            <span class="help-block" ng-show="forms.dataProviderForm.timeout.$dirty && forms.dataProviderForm.timeout.$error.required">{{ i18n.__('Data Server timeout is required') }}</span>
-            <span class="help-block" ng-show="forms.dataProviderForm.timeout.$error.terrama2Error">
-              {{ i18n.__("Data Server") + " " + serverErrors.timeout.message }}
-            </span>
-          </div>
-        </div>
-
         <div class="col-md-2">
           <div class="form-group">
             <div class="checkbox">
               <label style="font-weight: 700; margin-top:19px;">
                 <input type="checkbox" name="active" ng-model="dataProvider.active"
-                  ng-init="initActive(configuration.dataProvider.active)"> {{ i18n.__("Active Server") }}
+                  ng-init="initActive(configuration.dataProvider.active)"> {{ i18n.__("Active") }}
               </label>
             </div>
           </div>
